일단 임시로 테이블 구성을 완성하였으나 영속성관련해서 조금 더 알아볼 필요가 있음

--- a/MHMS/src/main/resources/application.properties
+++ b/MHMS/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:sqlite:src/main/resources/db/mhms.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=com.mhms.sqlite.config.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
 spring.jpa.hibernate.format_sql=true
