--- a/MHMS/pom.xml
+++ b/MHMS/pom.xml
@@ -43,6 +43,10 @@
 		    <artifactId>sqlite-jdbc</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
