--- a/MHMS/src/main/resources/application.properties
+++ b/MHMS/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.thymeleaf.order=0
 spring.datasource.url=jdbc:sqlite:src/main/resources/db/mhms.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=com.mhms.sqlite.config.SQLiteDialect
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
 spring.jpa.hibernate.format_sql=true
