--- a/StrafficSocket/config.ini
+++ b/StrafficSocket/config.ini
@@ -15,9 +15,11 @@ IP=10.231.100.242
 #127.0.0.1
 PORT=6379
 TIMEOUT=5
+USE_YN=N
 
 [Client]
 IP=127.0.0.1
 PORT=6001
-CNT=10
-SEND_CNT=100
+CNT=1
+SEND_CNT=1
+MSG=IF00010030AAAAABBBBBCCCCCDDDDDEEEEEFFFFF
