--- a/NettyBoot/pom.xml
+++ b/NettyBoot/pom.xml
@@ -49,6 +49,24 @@
 		    <version>4.5.0.Final</version>
 		</dependency>
 		
+		<!-- Mybatis -->
+		<dependency>
+	  		<groupId>org.mybatis</groupId>
+	  		<artifactId>mybatis</artifactId>
+	  		<version>3.4.4</version>
+	  	</dependency>
+	  	<dependency>
+	  		<groupId>mysql</groupId>
+	  		<artifactId>mysql-connector-java</artifactId>
+	  	</dependency>
+		
+		<!-- oracle jdbc -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0.3</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
